<resources>
    <string name="app_name">SmartStreet</string>

    <!-- LoginActivity -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="loginBtn">Login</string>
    <string name="registerBtn">Register</string>
    <string name="skipBtn">Skip</string>

    <!-- RegistrationActivity -->
    <string name="registrationActivity">Registration</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email ID</string>
    <string name="contact">Contact No</string>

    <!--- AboutFragment -->
    <string name="scanBttn">Scan</string>
    <string name="aboutFragment">About</string>

    <string name="deleteBtn">Remove</string>
    <string name="applyBtn">Apply</string>
    <string name="cancelBtn">Cancel</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_user_register">Register</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_admin">Admin Activity</string>
    <string name="action_Logout">Logout</string>
    <string name="scanner">Scanner</string>
    <string name="facebook_app_id">473201529551216</string>
    <string name="share" />
</resources>
