<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tree Update"
        android:textSize="30dp"
        android:textStyle="bold"
        android:id="@+id/textView28"
        android:textColor="#ffffff"
        android:background="#41c03f" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tree ID: "
        android:layout_alignBaseline="@+id/tree_id"
        android:layout_marginStart="20dp"
        android:layout_alignBottom="@+id/tree_id"
        android:layout_alignParentStart="true"
        android:id="@+id/textView29" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tree_id"
        android:text="sensorId"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/textView28"
        android:layout_alignStart="@+id/tree_location" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tree Location"
        android:id="@+id/textView30"
        android:layout_below="@+id/textView29"
        android:layout_marginStart="20dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tree_location"
        android:text="location"
        android:layout_alignTop="@+id/textView30"
        android:layout_alignStart="@+id/sensor_id" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sensor ID"
        android:layout_alignBaseline="@+id/sensor_id"
        android:layout_alignBottom="@+id/sensor_id"
        android:layout_marginStart="20dp"
        android:layout_alignParentStart="true"
        android:id="@+id/textView31" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sensor_id"
        android:text="sensor_id"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/tree_location"
        android:layout_centerHorizontal="true">
    </EditText>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteBtn"
        android:id="@+id/deleteTree"
        android:layout_alignTop="@+id/applyChange"
        android:layout_toEndOf="@+id/applyChange"
        android:layout_marginStart="30dp"
        android:background="#ed5858" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/applyBtn"
        android:id="@+id/applyChange"
        android:layout_marginStart="30dp"
        android:layout_below="@+id/sensor_id"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:background="#2bf349" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelBtn"
        android:id="@+id/cancelChange"
        android:layout_alignTop="@+id/deleteTree"
        android:layout_toEndOf="@+id/deleteTree"
        android:layout_marginStart="30dp"
        android:background="#52e5d4" />

</RelativeLayout>
